--- a/lhie1.conf
+++ b/lhie1.conf
@@ -17,26 +17,6 @@ network-framework = true
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
-🇨🇳 中国上海 - Back = ss, 175.102.11.10, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国上海 - BGP 1 = ss, 47.100.175.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国上海 - BGP 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国上海 - BGP 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 1 | IPLC = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 2 | IPLC = ss, hr02.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 3 | IPLC = ss, hr03.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 4 | IPLC = ss, hr04.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 5 | IPLC = ss, hr05.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇺🇸 中国上海 -> 美国 1 | IPLC = ss, 47.101.5.110, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=90eea29811.wns.windows.com, udp-relay=true
-🇨🇳 中国北京 - BGP 1 = ss, 117.50.72.79, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国北京 - BGP 2 = ss, 117.50.48.82, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国北京 - BGP 3 = ss, 40.73.4.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国徐州 - Back = ss, 221.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国杭州 - BGP 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国深圳 - BGP 1 = ss, 120.79.39.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国深圳 - BGP 2 = ss, 120.78.6.211, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国深圳 - BGP 3 = ss, 120.78.175.138, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 中国深圳 - BGP 4 = ss, 120.77.207.169, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇸🇬 中国深圳 -> 新加坡 1 | IPLC = ss, 47.106.59.183, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=90eea29811.wns.windows.com, udp-relay=true
 🇭🇰 中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -57,17 +37,6 @@ network-framework = true
 🇨🇳 台湾 - HINET 7 = ss, hinet7.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - HINET 8 = ss, hinet8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - HINET 9 = ss, hinet9.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇹🇷 土耳其 - NTT = ss, 185.219.132.186, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇧🇷 巴西 - Gcore = ss, 5.188.238.73, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇩🇪 德国 - AWS = ss, awsde.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇩🇪 德国 - GIA CN2 1 = ss, 82.129.30.6, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇩🇪 德国 - GIA CN2 2 = ss, 82.129.30.7, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇩🇪 德国 - GIA CN2 3 = ss, 82.129.30.11, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇸🇬 新加坡 - AWS = ss, awssg.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇸🇬 新加坡 - AZURE 1 = ss, 104.215.193.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇸🇬 新加坡 - AZURE 2 = ss, 104.215.193.145, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇸🇬 新加坡 - PCCW = ss, 217.197.161.62, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - AWS = ss, awsjp.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -82,10 +51,6 @@ network-framework = true
 🇲🇴 澳门 - CTM 3 = ss, ctm3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 4 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 5 = ss, ctm5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇬🇧 英国 - AWS = ss, awsuk.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇬🇧 英国 - AZURE = ss, 51.140.155.138, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇬🇧 英国 - LEVEL3 = ss, 185.181.9.206, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇳🇱 荷兰 - LEVEL3 = ss, 185.70.187.94, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷 韩国 - AZURE = ss, 52.141.35.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷 韩国 - KT 1 = ss, 211.43.15.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷 韩国 - KT 2 = ss, 211.43.15.86, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -147,8 +112,8 @@ network-framework = true
 🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, Proxy, policy-path = https://dler.cloud/link/grtJYTBcFo8epnVS?list=1
-olo = select, Proxy, DIRECT
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1
+olo = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 策略 = select, Proxy, DIRECT
 tw = select, Proxy, DIRECT
 game = select, DIRECT
