--- a/lhie1.conf
+++ b/lhie1.conf
@@ -119,12 +119,11 @@ tw = select, Proxy, DIRECT
 game = select, DIRECT
 
 [Rule]
-DOMAIN,experiment.appadhoc.com,REJECT // Added for webpage: experiment.appadhoc.com:443
+DOMAIN,experiment.appadhoc.com,REJECT
 DOMAIN,tracker.appadhoc.com,REJECT // KFC
 DOMAIN,fp.hwwt8.com,REJECT // KFC
 DOMAIN,trackingprd.hwwt8.com,REJECT // KFC
 DOMAIN-SUFFIX,rsshub.app,Proxy // rsshub
-IP-CIDR,100.24.0.0/13,game,no-resolve
 //apple
 //定位相关
 USER-AGENT,com.apple.geod*,DIRECT
@@ -875,6 +874,7 @@ DOMAIN-SUFFIX,visualstudio.com,策略
 DOMAIN-SUFFIX,windows.com,策略
 DOMAIN-SUFFIX,windows.net,策略
 DOMAIN-SUFFIX,windowsupdate.com,策略
+
 //Apple
 IP-CIDR,17.0.0.0/8,策略,no-resolve
 DOMAIN,appleiphonecell.com,策略
@@ -894,6 +894,8 @@ DOMAIN-SUFFIX,icloud.com,策略
 DOMAIN-SUFFIX,icloud-content.com,策略
 DOMAIN-SUFFIX,itunes.com,策略
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
+
+
 USER-AGENT,Argo*,Proxy
 DOMAIN-SUFFIX,netflix.com,Proxy
 DOMAIN-SUFFIX,netflix.net,Proxy
@@ -907,11 +909,13 @@ DOMAIN-SUFFIX,bbc.co.uk,Proxy
 DOMAIN-SUFFIX,bbci.co.uk,Proxy
 DOMAIN-KEYWORD,bbcfmt,Proxy
 DOMAIN-KEYWORD,uk-live,Proxy
+
 //动画疯
 USER-AGENT,Anime*,tw
 DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
+
 USER-AGENT,mytv*,Proxy
 DOMAIN-SUFFIX,mytvsuper.com,Proxy
 DOMAIN-SUFFIX,tvb.com,Proxy
@@ -925,6 +929,7 @@ USER-AGENT,PBS*,Proxy
 DOMAIN-SUFFIX,pbs.org,Proxy
 USER-AGENT,InstantVideo.US*,Proxy
 USER-AGENT,Prime%20Video*,Proxy
+
 //Spotify
 USER-AGENT,Spotify*,Proxy
 DOMAIN-SUFFIX,scdn.co,Proxy
@@ -933,6 +938,7 @@ DOMAIN-SUFFIX,spoti.fi,Proxy
 USER-AGENT,WeMusic*,Proxy
 USER-AGENT,JOOX*,Proxy
 DOMAIN-SUFFIX,joox.com,Proxy
+
 DOMAIN-SUFFIX,pandora.com,Proxy
 DOMAIN-SUFFIX,appspot.com,Proxy
 DOMAIN-SUFFIX,blogger.com,Proxy
@@ -1216,6 +1222,7 @@ DOMAIN,abc.go.com,Proxy
 DOMAIN,abc.net.au,Proxy
 DOMAIN,wego.here.com,Proxy
 USER-AGENT,Roam*,Proxy
+
 //game
 DOMAIN-SUFFIX,supercell.com,game
 DOMAIN-SUFFIX,brawlstars.com,game
@@ -1230,6 +1237,8 @@ IP-CIDR,54.0.0.0/8,game,no-resolve
 IP-CIDR,13.0.0.0/8,game,no-resolve
 IP-CIDR,34.0.0.0/8,game,no-resolve
 IP-CIDR,18.0.0.0/8,game,no-resolve
+IP-CIDR,100.24.0.0/13,game,no-resolve
+
 // Facebook
 IP-CIDR,103.4.96.0/22,Proxy,no-resolve
 IP-CIDR,129.134.0.0/17,Proxy,no-resolve
@@ -1246,6 +1255,7 @@ IP-CIDR,66.220.144.0/20,Proxy,no-resolve
 IP-CIDR,69.171.224.0/19,Proxy,no-resolve
 IP-CIDR,69.63.176.0/20,Proxy,no-resolve
 IP-CIDR,74.119.76.0/22,Proxy,no-resolve
+
 // Google
 IP-CIDR,173.194.0.0/16,Proxy,no-resolve
 IP-CIDR,74.125.0.0/16,Proxy,no-resolve
@@ -1356,6 +1366,7 @@ IP-CIDR,91.108.8.0/22,Proxy,no-resolve
 IP-CIDR,91.108.56.0/22,Proxy,no-resolve
 IP-CIDR,109.239.140.0/24,Proxy,no-resolve
 IP-CIDR,149.154.160.0/20,Proxy,no-resolve
+
 # DIRECT
 DOMAIN-SUFFIX,12306.com,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
@@ -1615,6 +1626,7 @@ IP-CIDR,185.188.33.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.34.0/24,DIRECT,no-resolve
 IP-CIDR,185.188.35.0/24,DIRECT,no-resolve
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
+
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
 GEOIP,CN,DIRECT
@@ -1626,5 +1638,4 @@ FINAL,Proxy,dns-failed
 ^http://www.baidu.com https://www.baidu.com/?tn=simple 302
 ^http://baidu.com https://www.baidu.com/?tn=simple 302
 ^http://m.baidu.com https://www.baidu.com/?tn=simple 302
-^http://www.google.cn http://www.google.com header
 ^https://www.baidu.com\/\?action=static&ms=1&version=css_page_2@0.* - reject
