--- a/lhie1.conf
+++ b/lhie1.conf
@@ -112,56 +112,28 @@ network-framework = true
 🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1, policy-path = https://raw.githubusercontent.com/olocn/rule/master/dler.conf
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
-# 去广告以及隐私追踪保护开关（macOS 不要开）
+# 去广告以及隐私追踪保护开关）
 Advertising = select,DIRECT,REJECT
 # 反运营商及臭名昭著的应用劫持保护开关
 Hijacking = select,DIRECT,REJECT
 # Apple 加速策略组
-Apple = select,DIRECT,
+Apple = select,DIRECT, Proxy
 
 [Rule]
+
+# Apple直连规则
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,DIRECT
+
 DOMAIN,experiment.appadhoc.com,REJECT
 DOMAIN,tracker.appadhoc.com,REJECT // KFC
 DOMAIN,fp.hwwt8.com,REJECT // KFC
 DOMAIN,trackingprd.hwwt8.com,REJECT // KFC
 DOMAIN-SUFFIX,rsshub.app,Proxy // rsshub
-//apple
-//定位相关
-USER-AGENT,com.apple.geod*,DIRECT
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
-//支付相关
-USER-AGENT,*Passbook*,DIRECT
-USER-AGENT,passd*,DIRECT
-USER-AGENT,seld*,DIRECT
-USER-AGENT,trustd*,DIRECT
-USER-AGENT,Wallet/1.0*,DIRECT
-//Siri
-USER-AGENT,*AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,sp.itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
+
+    
 
 //me
 DOMAIN-SUFFIX,umengcloud.com,REJECT
@@ -206,9 +178,9 @@ USER-AGENT,wpsoffice*,REJECT
 
 # Advertising Block 去广告以及隐私追踪保护
 # > Exclusions
-DOMAIN,analytics.google.com,PROXY
-DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
-DOMAIN,analyticsreporting.googleapis.com,PROXY
+DOMAIN,analytics.google.com,Proxy
+DOMAIN,analyticsinsights-pa.googleapis.com,Proxy
+DOMAIN,analyticsreporting.googleapis.com,Proxy
 DOMAIN,api.dizhensubao.igexin.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
@@ -273,18 +245,14 @@ IP-CIDR,100.24.0.0/13,game,no-resolve
 # ForeignMedia 媒体应用（Youtube、Netflix、HBO、Hulu、BBC iPlayer、Bahamut、myTV SUPER、AbemaTV、encoreTVB、PBS、Amazon Prime Video、Spotify、Pandora 和 JOOX）
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list,ForeignMedia
 
-# Apple直连规则
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,DIRECT
 
-# Apple 部分服务加速（App Store、Movies、Music）
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list,Apple
 
 # China 中国直连规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
 
 # Global 全球加速规则
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
 
 
 
