--- a/lhie1.conf
+++ b/lhie1.conf
@@ -112,30 +112,32 @@ network-framework = true
 🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
-# 去广告以及隐私追踪保护开关）
+# 去广告以及隐私追踪保
 Advertising = select,DIRECT,REJECT
-# 反运营商及臭名昭著的应用劫持保护开关
+# 反运营商及臭名昭著的应用劫持
 Hijacking = select,DIRECT,REJECT
-# Apple 加速策略组
-Apple = select,DIRECT, Proxy
+# Apple
+🍎 = select,DIRECT, Proxy
 
 [Rule]
 
+# SYSTEM直连规则
+RULE-SET,SYSTEM,DIRECT
 # Apple直连规则
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
+
+# ME
 DOMAIN,experiment.appadhoc.com,REJECT
 DOMAIN,tracker.appadhoc.com,REJECT // KFC
 DOMAIN,fp.hwwt8.com,REJECT // KFC
 DOMAIN,trackingprd.hwwt8.com,REJECT // KFC
-DOMAIN-SUFFIX,rsshub.app,Proxy // rsshub
-
-    
-
-//me
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,data.flurry.com,REJECT
@@ -143,7 +145,7 @@ DOMAIN-SUFFIX,qchannel01.cn,REJECT
 DOMAIN,g-assets.daily.taobao.net,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 
-//高德
+# > 高德
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
 DOMAIN,sync.amap.com,REJECT
@@ -170,7 +172,7 @@ DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
 
-//WPS
+# > WPS
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
@@ -192,14 +194,16 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 //ali
 IP-CIDR,47.246.16.0/24,DIRECT,no-resolve
 IP-CIDR,205.204.96.0/19,DIRECT,no-resolve
+DOMAIN-SUFFIX,rsshub.app,Proxy // rsshub
 DOMAIN-SUFFIX,pximg.net,Proxy
 DOMAIN-SUFFIX,wikimedia.org,Proxy
 IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
 IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
 IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
 IP-CIDR,140.101.144.98/32,Proxy,no-resolve
-DOMAIN-KEYWORD,github,Proxy
 IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,feedx.net,Proxy
+DOMAIN-SUFFIX,dlercloud.org,Proxy
 DOMAIN-SUFFIX,muncloud.com,Proxy
 DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,digicert.com,DIRECT
