--- a/lhie1.conf
+++ b/lhie1.conf
@@ -134,48 +134,8 @@ DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
 
 # ME
-DOMAIN,experiment.appadhoc.com,REJECT
-DOMAIN,tracker.appadhoc.com,REJECT // KFC
-DOMAIN,fp.hwwt8.com,REJECT // KFC
-DOMAIN,trackingprd.hwwt8.com,REJECT // KFC
-DOMAIN-SUFFIX,umengcloud.com,REJECT
-DOMAIN-SUFFIX,appbaqend.com,REJECT
-DOMAIN-SUFFIX,data.flurry.com,REJECT
-DOMAIN-SUFFIX,qchannel01.cn,REJECT
-DOMAIN,g-assets.daily.taobao.net,REJECT
-DOMAIN-SUFFIX,nuomi.com,REJECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
 
-# > 高德
-DOMAIN,aoscdn.amap.com,REJECT
-DOMAIN,page.amap.com,REJECT
-DOMAIN,sync.amap.com,REJECT
-DOMAIN,mps.amap.com,REJECT
-DOMAIN,aos-cdn-image.amap.com,REJECT
-DOMAIN,wb.amap.com,REJECT
-DOMAIN,f.amap.com,REJECT
-DOMAIN-SUFFIX,ac.mmstat.com,REJECT
-DOMAIN-SUFFIX,go.mmstat.com,REJECT
-DOMAIN-SUFFIX,gxb.mmstat.com,REJECT
-DOMAIN-SUFFIX,hz.mmstat.com,REJECT
-DOMAIN-SUFFIX,p3p.mmstat.com,REJECT
-DOMAIN-SUFFIX,res.mmstat.com,REJECT
-DOMAIN-SUFFIX,yt.mmstat.com,REJECT
-DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
-DOMAIN-SUFFIX,hockeyapp.net,REJECT
-DOMAIN,fuwu.wap.sogou.com,REJECT
-DOMAIN-SUFFIX,appodeal.com,REJECT
-DOMAIN-SUFFIX,applvn.com,REJECT
-DOMAIN,x.appbaqend.com,REJECT
-DOMAIN-SUFFIX,inner-active.mobi,REJECT
-DOMAIN-SUFFIX,applovin.com,REJECT
-DOMAIN,union.uc.cn,REJECT
-DOMAIN-SUFFIX,tlnk.io,REJECT
-DOMAIN-SUFFIX,alexametrics.com,REJECT
-
-# > WPS
-DOMAIN,ad-stat.ksosoft.com,REJECT
-DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
-USER-AGENT,wpsoffice*,REJECT
 
 
 # Advertising Block 去广告以及隐私追踪保护
@@ -190,45 +150,7 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 # Hijacking Protection 反运营商及臭名昭著的应用劫持保护
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list,Hijacking
 
-# > me
-//ali
-IP-CIDR,47.246.16.0/24,DIRECT,no-resolve
-IP-CIDR,205.204.96.0/19,DIRECT,no-resolve
-DOMAIN-SUFFIX,rsshub.app,Proxy // rsshub
-DOMAIN-SUFFIX,pximg.net,Proxy
-DOMAIN-SUFFIX,wikimedia.org,Proxy
-IP-CIDR,198.11.184.0/21,DIRECT,no-resolve
-IP-CIDR,198.11.128.0/18,DIRECT,no-resolve
-IP-CIDR,192.126.125.210/32,DIRECT,no-resolve
-IP-CIDR,140.101.144.98/32,Proxy,no-resolve
-IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
-DOMAIN-SUFFIX,feedx.net,Proxy
-DOMAIN-SUFFIX,dlercloud.org,Proxy
-DOMAIN-SUFFIX,muncloud.com,Proxy
-DOMAIN,e.crashlytics.com,DIRECT
-DOMAIN-SUFFIX,digicert.com,DIRECT
-DOMAIN-SUFFIX,ampproject.net,Proxy
-DOMAIN-SUFFIX,ampproject.org,Proxy
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,beautylegmm.com,Proxy
-DOMAIN-SUFFIX,pixhost.to,Proxy
-DOMAIN-SUFFIX,tiqcdn.com,DIRECT
-DOMAIN-SUFFIX,aolcdn.com,DIRECT
-DOMAIN-SUFFIX,mtvip.net,DIRECT
-DOMAIN-SUFFIX,lxysh.xyz,DIRECT
-DOMAIN-SUFFIX,cloudfront.net,DIRECT
-DOMAIN-SUFFIX,pthome.net,DIRECT
-DOMAIN-SUFFIX,acompli.net,Proxy
-DOMAIN-SUFFIX,helpshift.com,Proxy
-DOMAIN-SUFFIX,evernote.com,Proxy
-DOMAIN-SUFFIX,ssr.sh,Proxy
-DOMAIN-SUFFIX,sehuatang.org,Proxy
-DOMAIN-SUFFIX,sehuatang.com,Proxy
-DOMAIN-SUFFIX,zaobao.com,Proxy
-DOMAIN-SUFFIX,maying.co,Proxy
-DOMAIN,content.jwplatform.com,Proxy
-DOMAIN,videos-f.jwpsrv.com,Proxy
+
 
 //game
 DOMAIN-SUFFIX,supercell.com,game
