--- a/lhie1.conf
+++ b/lhie1.conf
@@ -133,10 +133,12 @@ DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
 
+
 # ME
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
-
-
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
 
 # Advertising Block 去广告以及隐私追踪保护
 # > Exclusions
@@ -152,21 +154,7 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 
 
 
-//game
-DOMAIN-SUFFIX,supercell.com,game
-DOMAIN-SUFFIX,brawlstars.com,game
-DOMAIN-SUFFIX,brawlstarsgame.com,game
-IP-CIDR,52.12.0.0/15,game,no-resolve
-IP-CIDR,35.0.0.0/8,game,no-resolve
-IP-CIDR,63.0.0.0/8,game,no-resolve
-IP-CIDR,184.0.0.0/8,game,no-resolve
-IP-CIDR,52.0.0.0/8,game,no-resolve
-IP-CIDR,3.0.0.0/8,game,no-resolve
-IP-CIDR,54.0.0.0/8,game,no-resolve
-IP-CIDR,13.0.0.0/8,game,no-resolve
-IP-CIDR,34.0.0.0/8,game,no-resolve
-IP-CIDR,18.0.0.0/8,game,no-resolve
-IP-CIDR,100.24.0.0/13,game,no-resolve
+
 
 # ForeignMedia 媒体应用（Youtube、Netflix、HBO、Hulu、BBC iPlayer、Bahamut、myTV SUPER、AbemaTV、encoreTVB、PBS、Amazon Prime Video、Spotify、Pandora 和 JOOX）
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list,ForeignMedia
