--- a/lhie1.conf
+++ b/lhie1.conf
@@ -112,7 +112,7 @@ network-framework = true
 🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 6, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 3, 🇲🇴 澳门 - CTM 4, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
@@ -131,7 +131,6 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
-
 
 
 # ME
@@ -156,13 +155,9 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 
 
 
-# ForeignMedia 媒体应用（Youtube、Netflix、HBO、Hulu、BBC iPlayer、Bahamut、myTV SUPER、AbemaTV、encoreTVB、PBS、Amazon Prime Video、Spotify、Pandora 和 JOOX）
+# ForeignMedia 媒体应用
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/ForeignMedia.list,ForeignMedia
 
-
-
-# China 中国直连规则
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
 
 # Global 全球加速规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
