--- a/lhie1.conf
+++ b/lhie1.conf
@@ -17,6 +17,12 @@ network-framework = true
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
+🇯🇵 中国上海 -> 日本 1 | IPLC = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵 中国上海 -> 日本 2 | IPLC = ss, hr02.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵 中国上海 -> 日本 3 | IPLC = ss, hr03.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵 中国上海 -> 日本 4 | IPLC = ss, hr04.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵 中国上海 -> 日本 5 | IPLC = ss, hr05.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇺🇸 中国上海 -> 美国 1 | IPLC = ss, 47.101.5.110, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=90eea29811.wns.windows.com, udp-relay=true
 🇭🇰 中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
