--- a/lhie1.conf
+++ b/lhie1.conf
@@ -34,32 +34,15 @@ network-framework = true
 🇨🇳 台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 4 = ss, 118.163.177.119, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 5 = ss, 61.216.38.199, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 1 = ss, 61.216.121.210, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 2 = ss, 125.227.83.15, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 3 = ss, hinet3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 4 = ss, hinet4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 5 = ss, hinet5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 6 = ss, hinet6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 7 = ss, hinet7.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 8 = ss, hinet8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - HINET 9 = ss, hinet9.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - IDCF 1 = ss, 203.137.182.207, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - IDCF 2 = ss, 210.140.81.153, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - IIJ 1 = ss, 150.66.1.161, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - IIJ 2 = ss, 150.66.2.249, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - PCCW = ss, 5.180.77.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 1 = ss, ctm1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 3 = ss, ctm3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 4 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇲🇴 澳门 - CTM 5 = ss, ctm5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国 - AZURE = ss, 52.141.35.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国 - KT 1 = ss, 211.43.15.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国 - KT 2 = ss, 211.43.15.86, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷 韩国 - SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇰🇷 韩国 - SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - AZURE 1 = ss, 23.98.36.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -79,46 +62,10 @@ network-framework = true
 🇭🇰 香港 - GIA CN2 7 = ss, 159.138.34.51, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - GIA CN2 8 = ss, 159.138.62.211, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - GIA CN2 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GT CN2 1 = ss, 193.110.202.198, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GT CN2 2 = ss, 193.110.201.134, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HGC 1 = ss, 118.140.26.188, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HGC 2 = ss, 118.140.26.181, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HGC 3 = ss, 118.140.26.176, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HKBN 1 = ss, hkbn1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HKBN 2 = ss, hkbn2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HKBN 3 = ss, hkbn3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - HKBN 4 = ss, hkbn4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 01 = ss, pccw1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 02 = ss, pccw2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 03 = ss, pccw3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 04 = ss, pccw4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 05 = ss, pccw5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 06 = ss, pccw6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 07 = ss, pccw7.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 08 = ss, pccw8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 09 = ss, pccw9.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 10 = ss, pccw10.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 11 = ss, pccw11.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 12 = ss, pccw12.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 13 = ss, pccw13.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 14 = ss, pccw14.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 15 = ss, pccw15.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 16 = ss, pccw16.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 17 = ss, pccw17.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 18 = ss, pccw18.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 19 = ss, pccw19.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - PCCW 20 = ss, pccw20.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 1 = ss, wtt1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 2 = ss, wtt2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 3 = ss, wtt3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 4 = ss, 103.241.165.109, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 5 = ss, wtt5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 6 = ss, wtt6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 7 = ss, wtt7.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - WTT 8 = ss, wtt8.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
