--- a/lhie1.conf
+++ b/lhie1.conf
@@ -22,13 +22,13 @@ network-framework = true
 🇯🇵 中国上海 -> 日本 3 | IPLC = ss, hr03.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 中国上海 -> 日本 4 | IPLC = ss, hr04.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 中国上海 -> 日本 5 | IPLC = ss, hr05.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇺🇸 中国上海 -> 美国 1 | IPLC = ss, 47.101.5.110, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=90eea29811.wns.windows.com, udp-relay=true
 🇭🇰 中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 6 | IPLC = ss, 47.107.25.183, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=90eea29811.wns.windows.com, udp-relay=true
+🇨🇳 中国上海 - BGP 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳 中国杭州 - BGP 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -65,7 +65,7 @@ network-framework = true
 
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC, 🇨🇳 中国杭州 - BGP 1, 🇨🇳 中国上海 - BGP 2
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
