--- a/lhie1.conf
+++ b/lhie1.conf
@@ -65,7 +65,7 @@ network-framework = true
 
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC, 🇰🇷 中国杭州 -> 韩国 1, 🇰🇷 中国上海 -> 韩国 2
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC, 🇰🇷 中国杭州 -> 韩国 1 | BGP, 🇰🇷 中国上海 -> 韩国 2 | BGP
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
