--- a/lhie1.conf
+++ b/lhie1.conf
@@ -17,18 +17,14 @@ network-framework = true
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
-🇯🇵 中国上海 -> 日本 1 | IPLC = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 2 | IPLC = ss, hr02.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 3 | IPLC = ss, hr03.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 4 | IPLC = ss, hr04.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 中国上海 -> 日本 5 | IPLC = ss, hr05.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵 上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 中国上海 -> 韩国 2 | BGP = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 中国杭州 -> 韩国 1 | BGP = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷 中国上海 -> 韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷 中国杭州 -> 韩国 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -65,7 +61,7 @@ network-framework = true
 
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9, 🇯🇵 中国上海 -> 日本 2 | IPLC, 🇰🇷 中国杭州 -> 韩国 1 | BGP, 🇰🇷 中国上海 -> 韩国 2 | BGP
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9,🇯🇵 上海日本IPLC 1, 🇰🇷 中国杭州 -> 韩国 1, 🇰🇷 中国上海 -> 韩国 2
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
