--- a/lhie1.conf
+++ b/lhie1.conf
@@ -23,8 +23,8 @@ network-framework = true
 🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 中国上海 -> 韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 中国杭州 -> 韩国 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷 上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴 杭州澳门 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇨🇳 台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -34,13 +34,10 @@ network-framework = true
 🇯🇵 日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇯🇵 日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门 - CTM 1 = ss, ctm1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门 - CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门 - CTM 3 = ss, ctm3.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门 - CTM 4 = ss, ctm4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门 - CTM 5 = ss, ctm5.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国 - SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国 - SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴 澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴 上海澳门 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷 韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷 韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - AZURE 1 = ss, 23.98.36.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - AZURE 2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 🇭🇰 香港 - AZURE 3 = ss, 13.70.23.41, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
@@ -61,7 +58,7 @@ network-framework = true
 
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门 - CTM 2, 🇰🇷 韩国 - SK 1, 🇭🇰 香港 - GIA CN2 9,🇯🇵 上海日本IPLC 1, 🇰🇷 中国杭州 -> 韩国 1, 🇰🇷 中国上海 -> 韩国 2
+Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门CTM 2, 🇰🇷 韩国 SK 1, 🇭🇰 香港 - GIA CN2 9, 🇲🇴 上海澳门 3, 🇯🇵 上海日本IPLC 1, 🇲🇴 杭州澳门 1, 🇰🇷 上海韩国 2
 ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
