--- a/lhie1.conf
+++ b/lhie1.conf
@@ -17,54 +17,54 @@ network-framework = true
 [Proxy]
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
 日本软银-3 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=qv4aZtT608, udp-relay=true
-🇯🇵 上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 杭州澳门 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - CHT 4 = ss, 118.163.177.119, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇨🇳 台湾 - CHT 5 = ss, 61.216.38.199, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇯🇵 日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇲🇴 上海澳门 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇰🇷 韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 1 = ss, 23.98.36.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 3 = ss, 13.70.23.41, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 4 = ss, 137.116.161.127, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - AZURE 8 = ss, 23.100.94.190, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 1 = ss, alihk1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 2 = ss, 159.138.34.239, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 3 = ss, 159.138.21.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 4 = ss, 159.138.33.163, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 5 = ss, 159.138.22.34, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 6 = ss, 159.138.59.174, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 7 = ss, 159.138.34.51, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 8 = ss, 159.138.62.211, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
-🇭🇰 香港 - GIA CN2 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵上海日本IPLC 1 = ss, hr01.bilibilivpn.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰中国深圳 -> 香港 1 | IPLC = ss, 120.79.73.29, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰中国深圳 -> 香港 2 | IPLC = ss, 120.79.68.85, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰中国深圳 -> 香港 3 | IPLC = ss, 120.78.168.63, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰中国深圳 -> 香港 4 | IPLC = ss, 120.79.75.225, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰中国深圳 -> 香港 5 | IPLC = ss, 39.108.191.24, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴澳门CTM 2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴杭州澳门 1 = ss, 47.99.140.189, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷上海韩国 2 = ss, 47.100.193.49, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇲🇴上海澳门 3 = ss, 40.73.112.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷韩国SK 1 = ss, 27.102.106.135, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇰🇷韩国SK 2 = ss, 27.102.118.46, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾 - CHT 1 = ss, 61.219.127.215, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾 - CHT 2 = ss, 211.75.30.99, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾 - CHT 3 = ss, 125.227.83.18, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾 - CHT 4 = ss, 118.163.177.119, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇨🇳台湾 - CHT 5 = ss, 61.216.38.199, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵日本 - AZURE 1 = ss, 104.46.219.106, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵日本 - AZURE 2 = ss, 13.78.10.155, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵日本 - BBTEC 1 = ss, 103.125.250.112, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇯🇵日本 - BBTEC 2 = ss, 103.121.209.148, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 1 = ss, 23.98.36.121, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 2 = ss, 52.175.79.144, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 3 = ss, 13.70.23.41, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 4 = ss, 137.116.161.127, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 5 = ss, 168.63.201.248, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 6 = ss, 52.184.103.104, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 7 = ss, 52.229.173.156, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - AZURE 8 = ss, 23.100.94.190, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 1 = ss, alihk1.0tk8a3a1q4t94dler.com, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 2 = ss, 159.138.34.239, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 3 = ss, 159.138.21.74, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 4 = ss, 159.138.33.163, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 5 = ss, 159.138.22.34, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 6 = ss, 159.138.59.174, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 7 = ss, 159.138.34.51, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 8 = ss, 159.138.62.211, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
+🇭🇰香港 - GIA CN2 9 = ss, 159.138.47.75, 37852, encrypt-method=aes-128-gcm, password=bpdftT, udp-relay=true
 
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 🇭🇰 香港 - AZURE 7, 🇲🇴 澳门CTM 2, 🇰🇷 韩国 SK 1, 🇭🇰 香港 - GIA CN2 9, 🇲🇴 上海澳门 3, 🇯🇵 上海日本IPLC 1, 🇲🇴 杭州澳门 1, 🇰🇷 上海韩国 2
-ForeignMedia = select, 日本软银-1, 🇰🇷 韩国 - SK 1
+Proxy = select, 日本软银-1, 🇲🇴杭州澳门 1, 🇰🇷上海韩国 2, 🇲🇴上海澳门 3, 🇰🇷韩国SK 1, 🇯🇵上海日本IPLC 1
+ForeignMedia = select, 日本软银-1, 🇰🇷韩国SK 1
 game = select, DIRECT
 # 去广告以及隐私追踪保
-Advertising = select,DIRECT,REJECT
+Advertising = select,REJECT
 # 反运营商及臭名昭著的应用劫持
-Hijacking = select,DIRECT,REJECT
+Hijacking = select,REJECT
 # Apple
 🍎 = select,DIRECT, Proxy
 
